// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager push secrets "frodo config-manager push secrets --env-file test/e2e/env/configManager1.env -D test/e2e/exports/fr-config-manager/cloud ": should import the secrets into cloud" 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets --env-file test/e2e/env/configManager1.env -D test/e2e/exports/fr-config-manager/cloud ": should import the secrets into cloud" 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
✔ Successfully read 3 secrets.
Error importing secret from "esv-prune-secrets.json"
No value found for placeholder "ESV_PRUNE_SECRETS"
Secret esv-fr-test-secret created version 4
Secret esv-test-secret created version 8
• 2 secrets imported.
Changes made to secrets: 2 updated, 0 unchanged
"
`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="new fr version" -n esv-test-secret -E ESV_TEST_SECRET="new test version" -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="new fr version" -n esv-test-secret -E ESV_TEST_SECRET="new test version" -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
✔ Successfully read 1 secrets.
Error importing secret from "esv-test-secret.json"
No value found for placeholder "ESV_TEST_SECRET_1"
• 0 secrets imported.
No changes, (0 secrets(s) already up to date)
"
`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="test1" test/e2e/exports/fr-config-manager/cloud": should import the specified secret into cloud 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="test1" test/e2e/exports/fr-config-manager/cloud": should import the specified secret into cloud 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
✔ Successfully read 1 secrets.
Secret esv-fr-test-secret created version 3
• 1 secrets imported.
Changes made to secrets: 1 updated, 0 unchanged
"
`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -p -n esv-prune-secrets -E ESV_PRUNE_SECRETS=test3  -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -p -n esv-prune-secrets -E ESV_PRUNE_SECRETS=test3  -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
✔ Successfully read 1 secrets.
• Pruned 3 versions from secret esv-prune-secrets.
Secret esv-prune-secrets unchanged version 4
• 1 secrets imported.
No changes, (1 secrets(s) already up to date)
"
`;
